--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="A little bit about me as a designer, examples of my work, and contact information so we can start talking!">
   <meta name="author" content="Janie Elizebeth">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel= "stylesheet" href="main.CSS">
+      <link rel= "stylesheet" href="style.CSS">
       <base>
 </head>
 <body>
